# cos582

./: hw1.ipynb  ml_articles_info copy.csv  ml_articles_info-cleaned.csv  ml_articles_info.csv  pyproject.toml
homework1/: ml_articles_info.csv
homework2/: ER_Diagram.pptx  best_movies.py  query_results.txt  sql.txt  task2_createdb.py  top_20_movies_95-04.csv
homework3/: Homework3_Writeup.txt  page_rank_dataset.txt  page_ranks.txt  page_vertices.txt  task1_mongodb.py  task1_queries.py  task2_pagerank.py  task3_spark_queries.py
homework3/joined_page_ranks.csv/: part-00000-7e25ecb2-73fc-4fd8-af77-cde26f617a39-c000.csv
homework3/page_rank_dataset_ranks.txt/: .part-00000.crc  part-00000
project/: Cos_582_Presentation.odp  UsageData-01_01_2022-11_26_2024.csv  alt_hdd.csv  daily_observations.csv  hdd.ipynb  hdd_kwh_relationships.ipynb  maine_hdd.ipynb  monthly polyfit  monthly_observations.csv  observations.csv  playground.py  simple_hdd.csv  usage.ipynb  weekly_poly.csv
