[tool.poetry]
name = "cos582"
version = "0.1.0"
description = ""
authors = ["Nick Garfield <nick.garfield@composites.maine.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.3"
requests = "^2.32.3"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
furl = "^2.1.3"
ipykernel = "^6.29.5"
selenium = "^4.25.0"
matplotlib = "^3.9.2"
psycopg2 = "^2.9.10"
meteostat = "^1.6.8"
pymongo = "^4.10.1"
pyspark = "^3.5.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
